fix: alignment of player badge

--- a/client/src/pages/NewGamePage/PlayerBadge/PlayerBadge.scss
+++ b/client/src/pages/NewGamePage/PlayerBadge/PlayerBadge.scss
@@ -5,7 +5,7 @@
   grid-column: 3/4;
   grid-row: 1/2;
   justify-self: center;
-  align-self: center;
+  align-self: end;
   opacity: 0;
 
   .user-image {
